--- a/src/view/ProjectInfoView.fxml
+++ b/src/view/ProjectInfoView.fxml
@@ -91,7 +91,10 @@
                </content></Tab>
             <Tab fx:id="membersTab" text="Members">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="464.0" prefWidth="913.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="464.0" prefWidth="913.0">
+                     <children>
+                        <VBox fx:id="membersContainer" layoutX="-4.0" layoutY="-3.0" prefHeight="536.0" prefWidth="920.0" />
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab fx:id="settingsTab" text="Settings">
