--- a/src/view/ProjectInfoView.fxml
+++ b/src/view/ProjectInfoView.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<fx:root stylesheets="@darkstyle.css" type="VBox" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root stylesheets="@darkstyle.css" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="projectTitle" text="Project name here">
          <VBox.margin>
@@ -24,7 +20,7 @@
         <tabs>
           <Tab fx:id="generalTab" text="General">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="204.0" prefWidth="913.0" style="-fx-background-color: white;">
+              <AnchorPane fx:id="generalContainer" minHeight="0.0" minWidth="0.0" prefHeight="204.0" prefWidth="913.0" style="-fx-background-color: white;">
                      <children>
                         <Label fx:id="projectLabel" layoutX="46.0" layoutY="28.0" text="Title" textFill="#1b1a1a">
                            <font>
@@ -95,7 +91,11 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="464.0" prefWidth="913.0">
                      <children>
-                        <VBox fx:id="membersContainer" layoutX="-4.0" layoutY="-3.0" prefHeight="536.0" prefWidth="920.0" />
+                        <VBox layoutX="-4.0" layoutY="-3.0" prefHeight="536.0" prefWidth="920.0">
+                           <children>
+                              <Button mnemonicParsing="false" onMouseClicked="#openNewMemberSearchWindow" text="+ Add new member" />
+                              <VBox fx:id="membersContainer" prefHeight="484.0" prefWidth="920.0" />
+                           </children></VBox>
                      </children></AnchorPane>
               </content>
             </Tab>
