--- a/src/view/darkstyle.css
+++ b/src/view/darkstyle.css
@@ -30,6 +30,14 @@
   -fx-background-color: linear-gradient(#555555, #444444);
 }
 
+.memberListItem{
+  -fx-background-color: linear-gradient(#777777, #888888);
+}
+
+.memberListItem:focused{
+  -fx-background-color: slategray;
+}
+
 /*NOTE: these need to have the same fx:id in order to work*/
 #deleteButton{
   -fx-background-color: rgb(200, 80, 80);
